--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
-    "chart.js": "^4.4.0",
+    "uplot": "^1.6.32",
     "vue": "^3.4.0",
     "vue-chartjs": "^5.3.0"
   },
